# YouTubeDownloaderPro

./: README.md  pyproject.toml  youtube_downloader.py
ytdlp_gui/: __init__.py  app.py  config.py  download_tab.py  engine.py  history_tab.py  models.py  queue_tab.py  settings_tab.py  utils.py
